//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Customer {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  photoPrimary String
  notes String
  facilities Facility [not null]
  orders Order [not null]
}

Table Facility {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  license String
  primaryContactName String
  primaryPhone String
  primaryEmail String
  address1 String
  address2 String
  city String
  state String
  zip String
  county String
  notes String
  customer Customer [not null]
  customerId String [not null]
  contacts Contact [not null]
  orders Order [not null]
}

Table Contact {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  firstName String [not null]
  lastName String [not null]
  pronouns String
  primaryPhone String
  secondaryPhone String
  emailAddress String
  notes String
  facility Facility [not null]
  facilityId String [not null]
}

Table LabTest {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  labFacilityLicenseNumber String
  labFacilityName String
  sourcePackageLabel String
  productName String
  productCategoryName String
  testPerformedDate DateTime
  testPassed Boolean [default: false]
  testComment String
  thcPercent Float
  cbdPercent String
  terpenePercent Float
  testBatch String
  harvestDate DateTime
  labTestExternalId String
  producerLicenseName String
  producerLicenseNumber String
  harvestLocation String
  stock Stock [not null]
  current Boolean [not null, default: false]
}

Table LineItem {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  strain String [not null]
  itemType String [not null]
  quantity Float [not null]
  ppu Float [not null]
  stockId String
  stock Stock
  order Order
  orderId String
  packedStatus Boolean [not null, default: false]
}

Table Order {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  scheduledPackDate DateTime
  scheduledShipDate DateTime
  dateDelivered DateTime
  status Status [not null]
  notes String
  facility Facility [not null]
  facilityId String [not null]
  customer Customer [not null]
  customerId String [not null]
  lineItems LineItem [not null]
}

Table Stock {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  strain String [not null]
  itemType String [not null]
  quantity Float
  uom String
  priceDefault Float
  labTest LabTest
  labTestId String
  lineItems LineItem [not null]
}

Enum Status {
  OPEN
  PACKED
  SHIPPED
  DELIVERED
  CLOSED
  COMPLETED
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Facility.customerId > Customer.id

Ref: Contact.facilityId > Facility.id

Ref: LineItem.stockId > Stock.id

Ref: LineItem.orderId > Order.id

Ref: Order.facilityId > Facility.id

Ref: Order.customerId > Customer.id

Ref: Stock.labTestId > LabTest.id